# unicon

./: .gitattributes  .gitignore  .readthedocs.yaml  .travis.yml  CONTRIBUTING.md  COPYING  COPYING.UNICON  Makedefs.in  Makedefs.uni.in  Makefile  Makefile.in  README  README.md  aclocal.m4  build.sh  configure  configure.ac  fixalllinks.icn  makefile.top  shtool  thin  thin.ac
.devcontainer/: devcontainer.json
.devcontainer/alpine/: devcontainer.json
.devcontainer/alpine-32/: devcontainer.json
.devcontainer/debian-13/: devcontainer.json
.devcontainer/fedora/: devcontainer.json
.devcontainer/rockylinux/: devcontainer.json
.devcontainer/ubuntu-24/: devcontainer.json
.github/: labeler.yml
.github/workflows/: build.yml  ccpp.yml  codeql.yml  label.yml  packages.yml  pages.yml
config/: Makefile  README  pthreads.c
config/editor/: README  unicon-notepad++.dark.xml  unicon-notepad++.light.xml  unicon.el  unicon.sublime-syntax
config/port/: Makefile  define.h  headers.ed  itest.dos  paths.h  rover.dos  rover.sun  rswitch.dos  rswitch.sun  scripts.arc
config/scripts/: ci-check-test-report.sh  unisrc-tar  unisrc.bat  version.sh
config/unix/: Makefile
dat/fonts/: PUBLIC  readme.txt
debian/: README.maintainer  changelog  control  copyright  rules  unicon.manpages  unicon.postinst
doc/: Makefile  README.md  dev-containers.md  icon.sty  utr23_preprocessor_enhancements.md  utr24_preprocessor_design.md
doc/book/: Makefile  README  admin.tex  advanced.tex  assoc.tex  cgi.tex  classes.tex  database.tex  diffs.tex  experimental.tex  genetic.tex  graphics.tex  gui.tex  install.tex  internet.tex  intro.tex  ipl.tex  langref.tex  large.tex  lexyacc.tex  makefile  monitor.tex  object.tex  port.tex  preface.tex  programs.tex  referenc.tex  string.tex  struct.tex  system.tex  thread.tex  ub.tex  ucl.tex  usecase.tex  utr8.tex
doc/ib/: Makefile  app-projects.tex  app-rtl.tex  app-solutions.tex  appA.tex  appB.tex  appC.tex  appD.tex  appH.tex  appI.tex  gnudoclicence.tex  ib.tex  ibpicture.tex  icon.sty  idxterms.xml  index-xref.tex  intro.tex  makefile  p1-exprEval.tex  p1-iconOverview.tex  p1-interpreter.tex  p1-intro.tex  p1-lists.tex  p1-organization.tex  p1-procs-coexprs.tex  p1-records-classes.tex  p1-runTime.tex  p1-sets-tables.tex  p1-storage.tex  p1-strings-csets.tex  p1-values.tex  p2-codeGen.tex  p2-codePerform.tex  p2-compiler.tex  p2-ctrlflow.tex  p2-futureWork.tex  p2-iconcOpt.tex  p2-iconcOrg.tex  p2-invoke.tex  p2-liveness.tex  (+16 more)
doc/icon/: Makefile  README  faq.htm  icon.1  icon_vt.1  ipd266.htm  ipd281.htm  ipd283.htm
doc/udb/: index.html  utr10.docx  utr10.html
doc/unicon/: appform.icn  faq.html  makefile  posix.html  reports.html  simp.html  simple.html  simple.icn  simple2.icn  svn.html  unicon.1  uniman.html  utr11.html  utr12.html  utr4.html  utr6.html  utr7.htm  utr8.html
doc/utr/: Makefile  htmlean.icn  icon.sty  makefile  utr.sty  utr10.html  utr12.html  utr13.odt  utr14.docx  utr15.tex  utr16.bib  utr16.tex  utr18.bib  utr18.tex  utr19.tex  utr20.tex  utr21.html  utr22.tex  utr23.tex  utr2b.html  utr3.tex  utr5b.odt  utr6.html  utr6b.odt  utr7.html  utr9.html  utr9.tex  utr9b.odt
ipl/: BuildExe  CheckAll  Makefile  README  Translate-icont
ipl/cfuncs/: Makefile  bitcount.c  cfunc.icn  cfunc.u  files.c  fpoll.c  icall.c  icall.h  internal.c  lgconv.c  mklib.sh  ppm.c  process.c  tconnect.c
ipl/docs/: README
ipl/gdocs/: README  vib.ps
ipl/gincl/: keysyms.icn
ipl/gprocs/: Makefile  bevel.icn  colorway.icn  dialog.icn  dsetup.icn  gpxop.icn  linddefs.icn  navitrix.icn  psrecord.icn  rpolys.icn  rstars.icn  rstartbl.icn  select.icn  tile.icn  tiler.icn  turtle.icn  twists.icn  vdialog.icn  vidgets.icn  viface.icn  vlist.icn  vsetup.icn  vtext.icn  winsnap.icn  xgtrace.icn
ipl/gprogs/: ca21.icn  colormap.icn  colrbook.icn  concen.icn  cw.icn  etch.icn  fev.icn  gallery.icn  giftoims.icn  gpxtest.icn  gxplor.icn  hb.icn  img.icn  imgpaper.icn  imgtolst.icn  kaleido.icn  linddefs.icn  linden.icn  mirroror.icn  moire.icn  offtiler.icn  penelope.icn  recticle.icn  rings.icn  rolypoly.icn  seamcut.icn  selectle.icn  sensdemo.icn  showtile.icn  sier.icn  vqueens.icn  wevents.icn
ipl/incl/: posix.icn
ipl/lib/: Makefile
ipl/mincl/: evdefs.icn  patdefs.icn
ipl/mprocs/: Makefile  colormap.icn  emutils.icn  evaltree.icn  evinit.icn  evnames.icn  evsyms.icn  evtmap.icn  evutils.icn  hexlib.icn  opname.icn  patnames.icn  syntname.icn  typebind.icn  viewpack.icn  visprocs.icn
ipl/mprogs/: alcview.icn  algae.icn  eve.icn  events.icn  locus.icn  mmm.icn  mtutils.icn  opersum.icn  ostrip.icn  piano.icn  playev.icn  roll.icn  scat.icn  vc.icn  vmsum.icn
ipl/procs/: Makefile  allof.icn  base64.icn  basename.icn  bold.icn  calendat.icn  calls.icn  cgi.icn  codeobj.icn  conffile.icn  curves.icn  (+35 more)
plugins/: Makefile  README
rpm/: unicon.spec
src/: Makefile
src/gdbm/: Makefile  Makefile.in  alloca.c  autoconf.h  autoconf.h.in  autoconf.wgc  bucket.c  close.c  configure  configure.in  configure.wgc  conv2gdbm.c  dbm.h  dbmclose.c  dbmdelete.c  dbmdirfno.c  dbmfetch.c  dbminit.c  dbmopen.c  dbmpagfno.c  dbmrdonly.c  dbmseq.c  dbmstore.c  delete.c  falloc.c  fetch.c  findkey.c  gdbm.h  gdbm.lib  gdbm.mak  gdbm.proto  gdbm.proto2  gdbmclose.c  gdbmconst.h  gdbmdefs.h  gdbmdelete.c  gdbmerrno.c  gdbmerrno.h  gdbmexists.c  gdbmfetch.c  (+21 more)
src/libtp/: LICENSE  Makefile  Makefile.in  acconfig.h  config.cache  config.h  config.h.in  config.status  config_h.win  configure  configure.in  makefile.wgc  makefile.win  tp.c  tp.h  tpdssl.c  tpdssl.h  tpdunix.c  tpdunix.h  tpmdaytm.c  tpmfinge.c  tpmhttp.c  tpmpop.c  tpmsmtp.c  unixdisc.c  unixdisc.h  util.c  util.h
src/libtp/shtool/: shtool
src/libtp/tests/: Makefile  Makefile.in  daytime.c  fing.c  hhead.c  pop.c  testuri.c  wtrace.c
src/libtp/uri/: Makefile  Makefile.in  makefile.wgc  makefile.win  uri.c  uri.h  uri_file.c  uri_fing.c  uri_ftp.c  uri_http.c  uri_mail.c  uri_pop.c  uri_schm.c  uri_schm.h
tests/: .gitignore  Makedefs  Makefile  Makefile.test  README
uni/: Makedefs  Makefile
(+2470 files in other folders)
